# devin

./: index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx
src/components/: TimeDimensionSelector.tsx
src/services/: api.ts
src/types/: index.ts
src/utils/: cache.ts  dataProcessing.ts  mockData.ts
translation-app/translation-backend/: pyproject.toml
translation-app/translation-backend/app/: main.py
translation-app/translation-frontend/: .env.production  package-lock.json  package.json
translation-app/translation-frontend/src/: App.tsx
translation-app/translation-frontend/src/components/: DocumentTranslator.tsx  ImageTranslator.tsx  LanguageSelector.tsx  VoiceTranslator.tsx  WebpageTranslator.tsx
