[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
psycopg = {extras = ["binary"], version = "^3.2.3"}
deep-translator = "^1.11.4"
python-multipart = "^0.0.20"
pytesseract = "^0.3.13"
pillow = "^11.0.0"
speechrecognition = "^3.12.0"
gtts = "^2.5.4"
pypdf2 = "^3.0.1"
python-docx = "^1.1.2"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
